<resources>
    <string name="app_name">CustomerLauncher</string>
    <string name="title_activity_main">Leanback MainActivity</string>
    <string name="browse_title">MZB STB</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_tv_storage">저장공간: 확인 중</string>
    <string name="dashboard_tv_ip">IP 주소: ---</string>
    <string name="dashboard_tv_adc">조도: ---</string>
    <string name="dashboard_tv_driver">드라이버: aw21036</string>
    <string name="dashboard_tv_networkstatus">네트워크 상태: 확인 중</string>
</resources>